# CMRepREg

MiscScripts/: RadiusFunctionCopy.py  RadiusFunctionToBndr.py  ScalegmmRegMeshTohjSkel.py  VTKtoMHD.py  assignRadiusToRegression.py  reconBoundaryReg_script.py  vtkChangeOrientation.py
deformetrica/app/: CMakeLists-vtk5.txt  CMakeLists-vtk6.txt  CMakeLists.txt  CMakeLists_CMRepReg_NonCMRep.txt  CMakeLists_Org.txt  CMakeLists_RegressionOnly.txt  CMakeLists_Regressions.txt  CMakeLists_SparseMatchint2.txt
deformetrica/app/atlas_building/: estimateAtlas.txx  sparseAtlas2.cxx  sparseAtlas3.cxx
deformetrica/app/cuda_benchmark/: benchmark.cxx
deformetrica/app/deformation/: CreateDeformationField.cxx
deformetrica/app/matching/: match.txx.old  sparseMatching2.cxx  sparseMatching3.cxx
deformetrica/app/regression/: estimateGeodesicRegression.txx  sparseRegression2.cxx  sparseRegression2.cxx~  sparseRegression3.cxx  sparseRegression3CMRep.cxx
deformetrica/app/shooting/: ShootAndFlow2.cxx  ShootAndFlow3.cxx  deform.txx
deformetrica/bin_cmrep/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  cmrep_fit
deformetrica/bin_cmrep/extras/toms611/: CTestTestfile.cmake  Makefile
deformetrica/bin_cmrep/testing/: CTestTestfile.cmake  Makefile  cmake_install.cmake
deformetrica/cmrep/: CMakeLists.txt  CMakeLists_Recon.txt  CMakeLists_backup.txt
deformetrica/cmrep/examples/: cmrparam_init.txt
deformetrica/cmrep/extras/toms611/: CTestTestfile.cmake  Makefile  cmake_install.cmake
deformetrica/cmrep/src/: Fit.cxx  GenericMedialModel.h  MedialModelIO.cxx  PDESubdivisionMedialModel.cxx  PDESubdivisionMedialModel.h  SH_ReconstructBoundary.cxx  ScriptInterface.cxx  ScriptInterface.h  VTKMedialMesh.cxx
deformetrica/doc/: Doxyfile
deformetrica/doc/design/: footer.html  header.html  style.css  stylesheet.css
deformetrica/doc/extra/: DoxygenLayout.xml  bibliography.bib  commands.sty
deformetrica/doc/pages/: example_programs.dox  installation_deformetrica.dox  mainpage.dox
deformetrica/doc/pages/dev/: eclipse.dox
deformetrica/example/50963_Cont/CMRep/: cmrep.sh  cmrparam_init.txt
deformetrica/example/50963_Cont/CMRepReg/: cmrep_bnd_00.vtk  cmrep_bnd_01.vtk  cmrep_bnd_02.vtk  cmrep_med_02.vtk  paramDiffeos.xml  reg_call.sh  reg_call.sh~
deformetrica/example/50963_Cont/InitialMatch/: paramDiffeos.xml  sparseMatch.sh
deformetrica/example/50963_Cont/UpdateRadius/: cmrep.sh  cmrep_med_00.vtk  cmrep_med_01.vtk  cmrparam_init.txt~  cmrparam_init_00.txt  cmrparam_init_01.txt  cmrparam_init_02.txt  def_00.cmrep  def_00.cmrep~  def_01.cmrep  def_02.cmrep
deformetrica/example/MultiShape/50963_High_CMRep/: cmrep.sh  cmrparam_init_02.txt  def1.cmrep  def2_02.cmrep  def2_02.vtk
deformetrica/example/MultiShape/50963_High_Regression/: lc_bnd_02.vtk  lc_med_00.vtk  left_caudate_00.vtk  left_caudate_01.vtk  left_caudate_02.vtk  left_putamen_00.vtk  left_putamen_01.vtk  left_putamen_02.vtk  lp_bnd_01.vtk  lp_med_00.vtk  paramDiffeos.xml  paramSurface.xml  reg_call.sh
deformetrica/example/MultiShape/InitializationMatching/: CP_final.txt  Mom_final.txt  def1_org_a.vtk  def1_org_a__t_0.vtk  def1_org_a__t_1.vtk  def1_org_a__t_10.vtk  def1_org_a__t_11.vtk  def1_org_a__t_12.vtk  def1_org_a__t_13.vtk  def1_org_a__t_14.vtk  def1_org_a__t_15.vtk  def1_org_a__t_16.vtk  def1_org_a__t_17.vtk  def1_org_a__t_18.vtk  def1_org_a__t_2.vtk  def1_org_a__t_3.vtk  def1_org_a__t_4.vtk  def1_org_a__t_5.vtk  def1_org_a__t_6.vtk  def1_org_a__t_7.vtk  def1_org_a__t_8.vtk  def1_org_a__t_9.vtk  paramSurface.xml  paramSurface.xml~  sparseMatch.sh  sparseMatch.sh~
deformetrica/lib/: install_deformetrica.sh
deformetrica/lib/cuda_convolutions/: CauchyFunction.h  GpuConv1D.cu  GpuConv1D.h  GpuConv2D.cu  GpuConv2D.h  ScalarRadialKernel.h  conv.cu
deformetrica/src/algo/4D_atlases/: Regression.h  Regression.txx
deformetrica/src/algo/atlases/: Atlas.h  Atlas.txx  BayesianAtlas.h  BayesianAtlas.txx  DeterministicAtlas.h  DeterministicAtlas.txx
deformetrica/src/algo/deformable_objects/: CMRep.h  CMRep.txx  DeformableMultiObject.h  DeformableMultiObject.txx  DeformableObject.h  DeformableObject.h~  DeformableObject.txx  EQLAImage.h  EQLAImage.txx  LCCImage.h  LCCImage.txx  Landmark.h  Landmark.txx  LinearInterpImage.h  LinearInterpImage.txx  NonOrientedPolyLine.h  NonOrientedPolyLine.txx  NonOrientedSurfaceMesh.h  NonOrientedSurfaceMesh.txx  OrientedPolyLine.h  OrientedPolyLine.txx  OrientedSurfaceMesh.h  OrientedSurfaceMesh.txx  PointCloud.h  PointCloud.txx  SSDImage.h  SSDImage.txx
deformetrica/src/algo/deformations/: AbstractDeformations.h  AbstractDeformations.txx  AdjointEquationsIntegrator.h  AdjointEquationsIntegrator.txx  Diffeos.h  Diffeos.txx
deformetrica/src/algo/energy_minimization/: AbstractAtlasEstimator.h  BayesianAtlasEstimator.h  BayesianAtlasEstimator.txx  BayesianAtlasFunctionalValues.h  (+8 more)
deformetrica/src/io/: DeformableObjectParameters.cxx  DeformableObjectParameters.h  DeformableObjectParametersXMLFile.cxx  DeformableObjectReader.h  DeformableObjectReader.txx  DeformationFieldIO.h  DeformationFieldIO.txx  SparseDiffeoParameters.cxx  SparseDiffeoParameters.h  SparseDiffeoParametersXMLFile.cxx  SparseDiffeoWriter.h  SparseDiffeoWriter.txx  readMatrixDLM.txx  writeMatrixDLM.txx
deformetrica/tutorial/scripts/: compute_obs_volume_script.py  compute_regression_volume_script.py  compute_regression_volume_script.py~  create_init_baselines_script.py  decimate_surfaces_script.py  match_init_baselines_script.py  mcubes_script.py  move_shapes_to_timeseries_script.py  plot_regression_volume_script.py  rigreg_script.py  run_regression_script_age.py  transform_surfaces_script.py
deformetrica/utils/apps/: CMakeLists.txt  CMakeLists.txt~  extractlabel.cxx  surfdecimate.cxx  surfio.cxx  surftransform.cxx  surfvolume.cxx
deformetrica/utils/meshes/: sphere1280_diced.vtk  sphere1280_diced5.vtk  sphere1280_diced8.vtk  sphere1280_diced9.vtk  sphere1280_patchX_8.vtk  sphere1280_patchY_8.vtk  sphere1280_patchZ_8.vtk
(+69 files in other folders)
